# graficas_por_computadora_UAM

./: README.md
codigos_de_ejemplo_profesor/: alteracion_menus.cpp  antialiasing_for_RGBA_mode.cpp  biliar_sqare0.cpp  biliar_sqare1.cpp  color_test_DECAL.cpp
ejercicios/1_haciendoUnTrianguloSimple/: primerLaboratorio_TringuloFijo.docx
ejercicios/2_haciendoUnTrianguloAndante/: TrianguloPescado.docx
ejercicios/creandoFondosDePantalla/Linux/: algoritmo_AABB.docx
ejercicios/eje_bitmaps/: CMakeLists.txt  LEEME.ME  Makefile
ejercicios/eje_bitmaps/src/: main.cpp
ejercicios/ejemploBezier/: Makefile
ejercicios/ejemploBezier/src/: main.cpp
ejercicios/ejemploConSombras/: Makefile
ejercicios/ejemploConStencilBlending/: Makefile
ejercicios/ejemploReflejo/: Makefile  README.md
ejercicios/primeraPrueba/: Makefile
ejercicios/primeraPrueba/src/: main.cpp
ejercicios/segundaPrueba/: Makefile
ejercicios/semana1_apunte3/: Makefile
ejercicios/terceraTecnica_sem2clas2/: Makefile
miProyectoFinal/: Makefile
miProyectoFinal/include/: Camara.h  Escenario.h  LuzSolar.h  Modelo3D.h  Skybox.h
miProyectoFinal/src/: Camara.cpp  Escenario.cpp  LuzSolar.cpp  Modelo3D.cpp  Skybox.cpp  main.cpp
programasProfesor/alteracion_menus/: Makefile  README.md
programasProfesor/antialiasing_for_RGBA/: Makefile  README.md
programasProfesor/biliar_sqare0/: Makefile  README.md
programasProfesor/biliar_sqare_1/: Makefile  README.md
programasProfesor/brazo_robotico/: Makefile
programasProfesor/color_test_DECAL/: README.md
programasProfesor/sistema_planetario/: Makefile
(+41 files in other folders)
